feat: add function to auto-install the php-apache extension mysqli

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   www:
-    image: php:apache
+    image: my-php-apache
     volumes:
       - "./:/var/www/html" # sync project dir with container web dir
     ports:
