--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  www:
+  www: # allows to open php pages
     image: my-php-apache
     volumes:
       - "./:/var/www/html" # sync project dir with container web dir
